# Lumi

./: .gitignore  Cargo.toml  EXAMPLES_CLEANUP.md  PLAN.md  README.md  gen_audio_test.rs  gen_sprite_animation.rs  output.ppm  test.nes  visual_output.ppm  visual_test.nes
crates/ai-agent/: Cargo.toml
crates/audio-output/: Cargo.toml
crates/emu-core/: Cargo.toml
crates/emu-core/src/: error.rs  lib.rs  memory_bus.rs  traits.rs  types.rs
crates/emu-nes/: Cargo.toml
crates/emu-nes/examples/: README.md  controller_demo.rs  cpu_demo.rs  generate_animation_test.rs  generate_controller_test.rs  generate_perfect_visual.rs  generate_scrolling_tests.rs  generate_test_rom.rs  generate_visual_rom.rs  nes_system_demo.rs  render_perfect.rs  render_test.rs  run_test_rom.rs  scrolling_compare.rs  test_apu_output.rs  test_backend.rs  visual_render_test.rs
crates/emu-nes/src/: apu.rs  cartridge.rs  lib.rs  memory.rs  palette.rs  ppu.rs  system.rs
crates/emu-nes/src/cpu/: instructions.rs  mod.rs  opcodes.rs
crates/feedback-writer/: Cargo.toml
crates/input-handler/: Cargo.toml
crates/memory-analyzer/: Cargo.toml
crates/ui/: Cargo.toml
examples/midi2nes/: Cargo.toml  README.md  gen_test_midi  gen_test_midi.rs  test_mary.mid  test_mary.nes
examples/midi2nes/src/: main.rs
lumiemu/: Cargo.toml  build.rs
lumiemu/src/: app.rs  main.rs
lumiemu/ui/: emulator.slint
