[package]
name = "lumiemu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
slint = { workspace = true }
emu-nes = { workspace = true }
emu-core = { workspace = true }
native-dialog = "0.7"

[build-dependencies]
slint-build = "1.5"
